--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expo-in-app-updates",
   "version": "0.1.0",
-  "description": "Native in-app updates for Android and IOS",
+  "description": "Native in-app updates for Android and iOS",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
