--- a/example/app.json
+++ b/example/app.json
@@ -13,7 +13,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "expo.modules.inappupdates.example"
+      "bundleIdentifier": "expo.modules.inappupdates.example",
+      "infoPlist": {
+        "AppStoreID": "1234567890"
+      }
     },
     "android": {
       "adaptiveIcon": {
