add sdk52 and new architecture in the example

--- a/example/app.json
+++ b/example/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -14,6 +15,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "expo.modules.inappupdates.example",
+      "buildNumber": "1",
       "infoPlist": {
         "AppStoreID": "1234567890"
       }
@@ -23,6 +25,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "versionCode": 1,
       "package": "expo.modules.inappupdates.example"
     }
   }
