--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/SohelIslamImran/expo-in-app-updates#readme",
   "dependencies": {},
   "devDependencies": {
-    "@types/react": "^18.0.25",
+    "@types/react": "~18.2.79",
     "expo-module-scripts": "^3.5.2",
     "expo-modules-core": "^1.12.24"
   },
